--- a/.env
+++ b/.env
@@ -7,11 +7,11 @@ APP_URL=http://localhost
 LOG_CHANNEL=stack
 
 DB_CONNECTION=mysql
-DB_HOST=bsdtizrdwc9hm3gqten7-mysql.services.clever-cloud.com
+DB_HOST=localhost
 DB_PORT=3306
-DB_DATABASE=bsdtizrdwc9hm3gqten7
-DB_USERNAME=upb2dkmiqn955doo
-DB_PASSWORD=fkAYJu4wmYKM0hP9Kjj4
+DB_DATABASE=ecartac
+DB_USERNAME=root
+DB_PASSWORD=
 #DB_SOCKET= /Applications/MAMP/tmp/mysql/mysql.sock
 
 BROADCAST_DRIVER=log
@@ -46,5 +46,5 @@ PUSHER_APP_CLUSTER=mt1
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
-#ALGOLIA_APP_ID = 6RW8NGD2LG
-#ALGOLIA_SECRET = 543ce277a765ca650d6256ddad993ab6
+ALGOLIA_APP_ID = 6RW8NGD2LG
+ALGOLIA_SECRET = 543ce277a765ca650d6256ddad993ab6
