--- a/.env
+++ b/.env
@@ -7,11 +7,11 @@ APP_URL=http://localhost
 LOG_CHANNEL=stack
 
 DB_CONNECTION=mysql
-DB_HOST=localhost
+DB_HOST=bsdtizrdwc9hm3gqten7-mysql.services.clever-cloud.com
 DB_PORT=3306
-DB_DATABASE=ecartac
-DB_USERNAME=root
-DB_PASSWORD=
+DB_DATABASE=bsdtizrdwc9hm3gqten7
+DB_USERNAME=upb2dkmiqn955doo
+DB_PASSWORD=fkAYJu4wmYKM0hP9Kjj4
 #DB_SOCKET= /Applications/MAMP/tmp/mysql/mysql.sock
 
 BROADCAST_DRIVER=log
