--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,11 @@
 /node_modules
-
+/public/hot
+/public/storage
+/storage/*.key
+/vendor
+.phpunit.result.cache
+Homestead.json
+.env
+Homestead.yaml
+npm-debug.log
+yarn-error.log
